--- a/docs/assets/custom/custom.css
+++ b/docs/assets/custom/custom.css
@@ -259,8 +259,13 @@ code {
   border: 0 !important;
 }
 
-.docs img {
+.docs img:not(.w-25):not(.w-50):not(.w-75):not(.w-100) {
   width: 50%;
+}
+
+.docs .w-100 {
+  width: 100% !important;
+  max-width: 100% !important;
 }
 
 .cmd {
