--- a/docs/assets/custom/custom.scss
+++ b/docs/assets/custom/custom.scss
@@ -236,16 +236,18 @@ th {
 figure {
   margin-top: 1rem;
   margin-bottom: 1rem;
+
   p {
-    margin: 0;
-    padding: 0;
+    margin: 0 !important;
+    padding: 0 !important;
   }
 
   figcaption {
+    font-size: 13px;
     margin: 0;
     padding: 0.3rem;
     padding-left: 1rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1.5rem;
     font-weight: 600;
   }
 }
