--- a/docs/assets/custom/custom.scss
+++ b/docs/assets/custom/custom.scss
@@ -18,10 +18,6 @@
   outline: none;
 }
 
-.img-fluid {
-  max-width: 75% !important;
-}
-
 .TIP,
 .WARNING,
 .NOTE {
@@ -291,13 +287,28 @@ code {
 }
 
 .docs {
-  img:not(.w-25):not(.w-50):not(.w-75):not(.w-100) {
-    width: 50%;
-  }
+  // img:not(.w-25):not(.w-50):not(.w-75):not(.w-100) {
+  //   width: 50%;
+  // }
 
   .w-100 {
     width: 100% !important;
     max-width: 100% !important;
+  }
+
+  .w-75 {
+    width: 75% !important;
+    max-width: 75% !important;
+  }
+
+  .w-50 {
+    width: 50% !important;
+    max-width: 50% !important;
+  }
+
+  .w-25 {
+    width: 25% !important;
+    max-width: 25% !important;
   }
 }
 
