--- a/docs/assets/custom/custom.scss
+++ b/docs/assets/custom/custom.scss
@@ -344,3 +344,11 @@ code {
 .embed-responsive{
   box-shadow: 0 8px 10px rgba(0,0,0,0.267), 0 40px 25px rgba(0,0,0,0.15);
 }
+
+.params td em{
+  display: block !important;
+  clear: both;
+  font-style: normal;
+  font-weight: 600;
+  text-emphasis: none;
+}
