--- a/docs/assets/custom/dark.css
+++ b/docs/assets/custom/dark.css
@@ -1,93 +1,71 @@
-.TIP {
+﻿.TIP {
   border-color: rgba(226, 200, 238, 0.33);
-  background-color: #150d1968;
-}
+  background-color: rgba(21, 13, 25, 0.41); }
 
 .WARNING {
   border-color: rgba(236, 189, 113, 0.33);
-  background-color: #2a200686;
-}
+  background-color: rgba(42, 32, 6, 0.52); }
 
 .NOTE {
   border-color: rgba(200, 238, 233, 0.33);
-  background-color: #ddfffb10;
-}
+  background-color: rgba(221, 255, 251, 0.07); }
 
 body {
   background-color: #252526 !important;
-  color: #9f9f9f !important;
-}
+  color: #9f9f9f !important; }
 
 .table {
-  color: #9f9f9f !important;
-}
+  color: #9f9f9f !important; }
 
 .navbar {
   background-color: #1e1e1e !important;
-  color: #e0e0e0 !important;
-}
-
-.navbar .navbar-nav .active > .nav-link {
-  color: #fff !important;
-}
+  color: #e0e0e0 !important; }
+  .navbar .navbar-nav .active > .nav-link {
+    color: #fff !important; }
 
 h1,
 h2,
 h3,
 h4 {
-  color: #fff;
-}
+  color: #fff; }
 
 a {
-  color: #51aeff;
-}
+  color: #51aeff; }
 
 .nav-tabs .nav-link.active {
   color: #fff;
   position: relative;
-  left: 1px;
-}
-
-.nav-tabs .nav-link.active a {
-  color: #eee;
-}
+  left: 1px; }
+  .nav-tabs .nav-link.active a {
+    color: #eee; }
 
 .card-header {
-  background-color: #14151728 !important;
-}
+  background-color: rgba(20, 21, 23, 0.15) !important; }
 
 h1,
 h2,
 h3 {
-  color: #f0f0f0;
-}
+  color: #f0f0f0; }
 
 h3 {
-  border-bottom: 0;
-}
+  border-bottom: 0; }
 
 hr {
   color: #666;
-  border-color: #666;
-}
+  border-color: #666; }
 
 #docs-navbar .nav li a {
-  border-left-color: transparent;
-}
+  border-left-color: transparent; }
 
 pre,
 code,
 kbd {
   color: #f4f2f9;
-  background-color: #0072be;
-}
+  background-color: #0072be; }
 
 .table th {
-  border-color: #6f6f6f !important;
-}
+  border-color: #6f6f6f !important; }
 
 .table tr,
 .table td {
-  border-color: #555 !important;
-}
-/*# sourceMappingURL=dark.css.map */
+  border-color: #555 !important; }
