--- a/docs/assets/custom/dark.css
+++ b/docs/assets/custom/dark.css
@@ -61,7 +61,8 @@ pre,
 code,
 kbd {
   color: #f4f2f9;
-  background-color: #0072be; }
+  background: linear-gradient(#0072be, #093c5e);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.22), 0 5px 35px rgba(0, 0, 0, 0.1); }
 
 .table th {
   border-color: #6f6f6f !important; }
