--- a/docs/assets/custom/custom.css
+++ b/docs/assets/custom/custom.css
@@ -235,6 +235,9 @@ kbd {
 .shortcuts .table {
   width: 75% !important; }
 
+pre code {
+  background: none !important; }
+
 .embed-responsive {
   box-shadow: 0 8px 10px rgba(0, 0, 0, 0.267), 0 40px 25px rgba(0, 0, 0, 0.15);
   margin-bottom: 24px; }
@@ -301,11 +304,14 @@ kbd {
 .home img {
   border: 0 !important;
   box-shadow: none !important;
-  cursor: pointer; }
+  cursor: pointer;
+  margin-right: 8px;
+  padding-top: 36px;
+  padding-bottom: 24px; }
 
 .home h2 {
-  margin-top: 6px !important;
-  padding-top: 6px !important; }
+  margin-top: 0px !important;
+  padding-top: 0px !important; }
 
 .params td:nth-child(1) {
   font-size: 12px;
