Search update, new content

--- a/docs/assets/custom/custom.css
+++ b/docs/assets/custom/custom.css
@@ -362,7 +362,12 @@ pre code {
   margin: 0 !important;
   padding: 0 !important; }
   .video-holder video {
-    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.267), 0 40px 25px rgba(0, 0, 0, 0.15); }
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.267), 0 40px 25px rgba(0, 0, 0, 0.15);
+    border: 2px solid transparent;
+    transition: all linear 0.2s !important; }
+    .video-holder video:hover {
+      border: 2px solid #0072be;
+      transition: all linear 0.2s !important; }
 
 .monkey-holder {
   margin: 0;
@@ -379,3 +384,6 @@ footer {
 
 .wip small {
   border: 1px solid rgba(168, 68, 66, 0.25) !important; }
+
+.botbot {
+  z-index: 5000; }
