--- a/docs/assets/custom/dark.css
+++ b/docs/assets/custom/dark.css
@@ -33,7 +33,12 @@ h4 {
   color: #fff; }
 
 a {
-  color: #51aeff; }
+  color: #51aeff;
+  transition: color linear 0.2s; }
+  a:hover {
+    color: #ecbd71;
+    transition: color linear 0.2s;
+    text-decoration: none; }
 
 .nav-tabs .nav-link.active {
   color: #fff;
@@ -59,6 +64,8 @@ hr {
 
 #docs-navbar .nav li a {
   border-left-color: transparent; }
+  #docs-navbar .nav li a:hover {
+    border-left-color: #999; }
 
 pre,
 code,
@@ -73,3 +80,14 @@ kbd {
 .table tr,
 .table td {
   border-color: #555 !important; }
+
+.fancybox-content {
+  color: #eee;
+  background-color: #303030; }
+
+#results small {
+  background: #333; }
+
+#results li {
+  border: 1px solid #2f2f2f;
+  background-color: #202020; }
