--- a/docs/assets/custom/custom.scss
+++ b/docs/assets/custom/custom.scss
@@ -542,6 +542,16 @@ footer {
 }
 
 
-.botbot{
+.botbot {
     z-index: 5000;
+}
+
+
+.grid {
+    display: block;
+    float: left;
+
+    &:last-child {
+        clear: right;
+    }
 }
