--- a/docs/assets/fixed/bundle.css
+++ b/docs/assets/fixed/bundle.css
@@ -1,4 +1,57 @@
 /*!
+ * Bootstrap Table of Contents v0.4.1 (http://afeld.github.io/bootstrap-toc/)
+ * Copyright 2015 Aidan Feldman
+ * Licensed under MIT (https://github.com/afeld/bootstrap-toc/blob/gh-pages/LICENSE.md) */
+
+nav[data-toggle=toc] * {
+    border-left: 1px solid transparent;
+}
+
+nav[data-toggle=toc] .nav>li>a {
+    display: block;
+    padding: 4px 20px;
+    font-size: 13px;
+    font-weight: 600;
+    color: #767676;
+    border-left: 1px solid transparent;
+}
+
+nav[data-toggle=toc] .nav>li>a:focus, nav[data-toggle=toc] .nav>li>a:hover {
+    color: #0071BC;
+    text-decoration: none;
+    background-color: transparent;
+    border-left: 1px solid #0071BC;
+}
+
+nav[data-toggle=toc] .nav>.active:focus>a, nav[data-toggle=toc] .nav>.active:hover>a, nav[data-toggle=toc] .nav>.active>a {
+    font-weight: 700;
+    color: #0071BC;
+    background-color: transparent;
+}
+
+nav[data-toggle=toc] .nav .nav>li>a {
+    padding-top: 1px;
+    padding-bottom: 1px;
+    padding-left: 30px;
+    font-size: 12px;
+    border-left: 1px solid transparent;
+}
+
+nav[data-toggle=toc] .nav .nav>li>a:focus, nav[data-toggle=toc] .nav .nav>li>a:hover {
+    padding-left: 28px;
+}
+
+nav[data-toggle=toc] .nav .nav>.active:focus>a, nav[data-toggle=toc] .nav .nav>.active:hover>a, nav[data-toggle=toc] .nav .nav>.active>a {
+    padding-left: 28px;
+    font-weight: 600;
+    border-left: 1px solid transparent;
+}
+
+nav[data-toggle=toc] .nav>.active>ul {
+    display: block;
+    border-left: 1px solid transparent;
+}
+/*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
@@ -185,7 +238,7 @@
    th {
     padding:0
    }
-   /*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */@media print {
+   @media print {
     *,
     :after,
     :before {
@@ -1079,7 +1132,7 @@
     -webkit-tap-highlight-color:rgba(0,0,0,0)
    }
    body {
-    font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
+    
     font-size:14px;
     line-height:1.42857143;
     color:#333;
@@ -6071,7 +6124,7 @@
     position:absolute;
     z-index:1070;
     display:block;
-    font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
+    
     font-size:12px;
     font-style:normal;
     font-weight:400;
@@ -6189,7 +6242,7 @@
     display:none;
     max-width:276px;
     padding:1px;
-    font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
+    
     font-size:14px;
     font-style:normal;
     font-weight:400;
@@ -6833,3 +6886,201 @@
     }
    }
    
+@charset "UTF-8";
+.mt-square, .mt-square-garden, .mt-square-matcha, .mt-square-pink, .mt-square-tomato {
+    display: inline-block;
+    box-sizing: border-box
+}
+
+.mt-square-garden label:before, .mt-square-matcha label:before, .mt-square-pink label:before, .mt-square-tomato label:before, .mt-square label:before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 4em;
+    height: 2em;
+    background: #f0134d;
+    transition: .3s ease;
+    z-index: 1
+}
+
+.mt-square-garden input, .mt-square-matcha input, .mt-square-pink input, .mt-square-tomato input, .mt-square input {
+    position: absolute;
+    box-sizing: border-box;
+    height: 0;
+    width: 0;
+    font-size: inherit;
+    margin: 0;
+    border: none;
+    z-index: 1;
+    cursor: pointer;
+    -moz-appearance: none;
+    -webkit-appearance: none
+}
+
+.mt-square-garden input:focus, .mt-square-matcha input:focus, .mt-square-pink input:focus, .mt-square-tomato input:focus, .mt-square input:focus {
+    outline: none
+}
+
+.mt-square-garden input:after, .mt-square-garden input:before, .mt-square-matcha input:after, .mt-square-matcha input:before, .mt-square-pink input:after, .mt-square-pink input:before, .mt-square-tomato input:after, .mt-square-tomato input:before, .mt-square input:after, .mt-square input:before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 4em;
+    height: 3em;
+    z-index: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #888;
+    letter-spacing: 1px
+}
+
+.mt-square-garden input:before, .mt-square-matcha input:before, .mt-square-pink input:before, .mt-square-tomato input:before, .mt-square input:before {
+    content: "DARK"
+}
+
+.mt-square-garden input:after, .mt-square-matcha input:after, .mt-square-pink input:after, .mt-square-tomato input:after, .mt-square input:after {
+    content: "LIGHT";
+    left: 4em
+}
+
+.mt-square-garden input:checked+label:before, .mt-square-matcha input:checked+label:before, .mt-square-pink input:checked+label:before, .mt-square-tomato input:checked+label:before, .mt-square input:checked+label:before {
+    background: #40bfc1;
+    transform: translateX(4em)
+}
+
+.mt-square-garden input:disabled:after, .mt-square-garden input:disabled:before, .mt-square-matcha input:disabled:after, .mt-square-matcha input:disabled:before, .mt-square-pink input:disabled:after, .mt-square-pink input:disabled:before, .mt-square-tomato input:disabled:after, .mt-square-tomato input:disabled:before, .mt-square input:disabled:after, .mt-square input:disabled:before {
+    cursor: not-allowed!important
+}
+
+.mt-square-garden input:disabled+label, .mt-square-matcha input:disabled+label, .mt-square-pink input:disabled+label, .mt-square-tomato input:disabled+label, .mt-square input:disabled+label {
+    background: #ccc!important;
+    cursor: not-allowed!important
+}
+
+.mt-square-garden input:disabled+label:before, .mt-square-matcha input:disabled+label:before, .mt-square-pink input:disabled+label:before, .mt-square-tomato input:disabled+label:before, .mt-square input:disabled+label:before {
+    background: #ddd!important
+}
+
+.mt-square-matcha label:before {
+    background: #5b5656
+}
+
+.mt-square-matcha input:checked+label:before {
+    background: #414141
+}
+/*
+ * Visual Studio 2015 dark style
+ * Author: Nicolas LLOBERA <nllobera@gmail.com>
+ */
+
+.hljs {
+  display: block;
+  overflow-x: auto;
+  padding: 0.5em;
+  background: #1E1E1E;
+  color: #DCDCDC;
+}
+
+.hljs-keyword,
+.hljs-literal,
+.hljs-symbol,
+.hljs-name {
+  color: #569CD6;
+}
+.hljs-link {
+  color: #569CD6;
+  text-decoration: underline;
+}
+
+.hljs-built_in,
+.hljs-type {
+  color: #4EC9B0;
+}
+
+.hljs-number,
+.hljs-class {
+  color: #B8D7A3;
+}
+
+.hljs-string,
+.hljs-meta-string {
+  color: #D69D85;
+}
+
+.hljs-regexp,
+.hljs-template-tag {
+  color: #9A5334;
+}
+
+.hljs-subst,
+.hljs-function,
+.hljs-title,
+.hljs-params,
+.hljs-formula {
+  color: #DCDCDC;
+}
+
+.hljs-comment,
+.hljs-quote {
+  color: #57A64A;
+  font-style: italic;
+}
+
+.hljs-doctag {
+  color: #608B4E;
+}
+
+.hljs-meta,
+.hljs-meta-keyword,
+.hljs-tag {
+  color: #9B9B9B;
+}
+
+.hljs-variable,
+.hljs-template-variable {
+  color: #BD63C5;
+}
+
+.hljs-attr,
+.hljs-attribute,
+.hljs-builtin-name {
+  color: #9CDCFE;
+}
+
+.hljs-section {
+  color: gold;
+}
+
+.hljs-emphasis {
+  font-style: italic;
+}
+
+.hljs-strong {
+  font-weight: bold;
+}
+
+/*.hljs-code {
+  font-family:'Monospace';
+}*/
+
+.hljs-bullet,
+.hljs-selector-tag,
+.hljs-selector-id,
+.hljs-selector-class,
+.hljs-selector-attr,
+.hljs-selector-pseudo {
+  color: #D7BA7D;
+}
+
+.hljs-addition {
+  background-color: #144212;
+  display: inline-block;
+  width: 100%;
+}
+
+.hljs-deletion {
+  background-color: #600;
+  display: inline-block;
+  width: 100%;
+}
