--- a/docs/stylesheets/monkey.css
+++ b/docs/stylesheets/monkey.css
@@ -87,3 +87,6 @@ pre code {
   padding: 0.5rem 1.2rem;
   background-color: #ffecf2;
   border: 1px solid #e7cbdb; }
+
+#related {
+  margin-top: 5rem; }
