--- a/docs/stylesheets/monkey.css
+++ b/docs/stylesheets/monkey.css
@@ -1,30 +1,37 @@
 ﻿#main-stuff {
-  min-height: 60vh; }
+  min-height: 60vh;
+}
 
 ::-moz-selection {
-  background-color: #fff1a5; }
+  background-color: #fff1a5;
+}
 
 ::selection {
-  background-color: #fff1a5; }
+  background-color: #fff1a5;
+}
 
 body.pushable .pusher {
-  background: #eee; }
+  background: #eee;
+}
 
 .no.example p {
-  text-align: justify; }
+  text-align: justify;
+}
 
 .val {
   background-color: #e8e7ea;
   border: 0;
   padding-left: 0.3em;
-  padding-right: 0.3em; }
+  padding-right: 0.3em;
+}
 
 p code {
   background-color: #e0e1e2;
   border: 1px solid #c3c7cc;
   padding-left: 0.25em;
   padding-right: 0.25em;
-  /*box-shadow: 0 6px 20px rgba(0,0,0,0.2);*/ }
+  /*box-shadow: 0 6px 20px rgba(0,0,0,0.2);*/
+}
 
 /*
 h2 {
@@ -36,261 +43,329 @@ h4 {
 }*/
 dl dt {
   font-weight: bold;
-  margin-top: 1rem; }
-
+  margin-top: 1rem;
+}
 dl dd {
   margin-top: 0.35rem;
-  margin-left: 0; }
+  margin-left: 0;
+}
 
 figure {
-  margin: 0.5rem 0 1rem; }
-  figure figcaption {
-    font-size: 12px;
-    font-weight: 600;
-    padding: 6px 3px;
-    opacity: 0.6;
-    /*border-bottom: 1px solid #cfcfcf;*/ }
+  margin: 0.5rem 0 1rem;
+}
+figure figcaption {
+  font-size: 12px;
+  font-weight: 600;
+  padding: 6px 3px;
+  opacity: 0.6;
+  /*border-bottom: 1px solid #cfcfcf;*/
+}
 
 #main-nav {
   border: 0;
   /*    .hive:first-child {
-        margin-top: 2em !important;
-    }*/ }
-  #main-nav .top {
-    color: #ffd9b2 !important;
-    text-transform: uppercase; }
-  #main-nav .hive {
-    color: #f8f0d2;
-    padding: 1.5em 2em !important; }
-  #main-nav .item {
-    padding: .5em 1em; }
-    #main-nav .item.active {
-      background: #2d2e2f !important;
-      border: 1px solid #4d5053;
-      border-top: 0;
-      border-left: 0; }
-    #main-nav .item .accordion {
-      padding-left: 1em !important; }
-      #main-nav .item .accordion .title {
-        color: #dfdfdf !important;
-        font-size: 13px;
-        font-weight: bold;
-        transition: all linear 0.2s; }
-        #main-nav .item .accordion .title:hover {
-          color: #d5bf69 !important;
-          transition: all linear 0.2s; }
-        #main-nav .item .accordion .title .icon {
-          font-size: 11px; }
-      #main-nav .item .accordion .startSection::before {
-        background: white;
-        margin-bottom: 1em !important;
-        height: 4px;
-        width: 90%;
-        content: '';
-        display: block;
-        height: 1px;
-        opacity: 0.1;
-        position: relative;
-        left: -0.25em; }
-      #main-nav .item .accordion .subitem {
-        display: block;
-        padding-top: 0.5em !important;
-        padding-bottom: 0.5em !important;
-        padding-left: 1.8em;
-        font-size: 12px;
-        color: #d4d4d4 !important;
-        transition: all linear 0.2s; }
-        #main-nav .item .accordion .subitem:hover {
-          color: #d5bf69 !important;
-          transition: all linear 0.2s; }
-        #main-nav .item .accordion .subitem.active {
-          color: #ffcc00 !important;
-          font-weight: bold; }
-  #main-nav .active.item:first-child {
-    border-radius: 0;
-    margin-top: 7em; }
+      margin-top: 2em !important;
+  }*/
+}
+#main-nav .top {
+  color: #ffd9b2 !important;
+  text-transform: uppercase;
+}
+#main-nav .hive {
+  color: #f8f0d2;
+  padding: 1.5em 2em !important;
+}
+#main-nav .item {
+  padding: 0.5em 1em;
+}
+#main-nav .item.active {
+  background: #2d2e2f !important;
+  border: 1px solid #4d5053;
+  border-top: 0;
+  border-left: 0;
+}
+#main-nav .item .accordion {
+  padding-left: 1em !important;
+}
+#main-nav .item .accordion .title {
+  color: #dfdfdf !important;
+  font-size: 13px;
+  font-weight: bold;
+  transition: all linear 0.2s;
+}
+#main-nav .item .accordion .title:hover {
+  color: #d5bf69 !important;
+  transition: all linear 0.2s;
+}
+#main-nav .item .accordion .title .icon {
+  font-size: 11px;
+}
+#main-nav .item .accordion .startSection::before {
+  background: white;
+  margin-bottom: 1em !important;
+  height: 4px;
+  width: 90%;
+  content: "";
+  display: block;
+  height: 1px;
+  opacity: 0.1;
+  position: relative;
+  left: -0.25em;
+}
+#main-nav .item .accordion .subitem {
+  display: block;
+  padding-top: 0.5em !important;
+  padding-bottom: 0.5em !important;
+  padding-left: 1.8em;
+  font-size: 12px;
+  color: #d4d4d4 !important;
+  transition: all linear 0.2s;
+}
+#main-nav .item .accordion .subitem:hover {
+  color: #d5bf69 !important;
+  transition: all linear 0.2s;
+}
+#main-nav .item .accordion .subitem.active {
+  color: #ffcc00 !important;
+  font-weight: bold;
+}
+#main-nav .active.item:first-child {
+  border-radius: 0;
+  margin-top: 7em;
+}
 
 #toc .startSection::before {
   background: white;
   margin-bottom: 1em !important;
   height: 4px;
   width: 90%;
-  content: '';
+  content: "";
   display: block;
   height: 1px;
   opacity: 0.1;
   position: relative;
-  left: -0.25em; }
+  left: -0.25em;
+}
 
 .ui.secondary.inverted.pointing.menu .red {
   color: #ffcc00 !important;
-  transition: all linear 0.2s; }
-  .ui.secondary.inverted.pointing.menu .red:hover {
-    color: #f0f0f0 !important;
-    border-color: rgba(251, 86, 33, 0.8);
-    transition: all linear 0.2s; }
+  transition: all linear 0.2s;
+}
+.ui.secondary.inverted.pointing.menu .red:hover {
+  color: #f0f0f0 !important;
+  border-color: rgba(251, 86, 33, 0.8);
+  transition: all linear 0.2s;
+}
 
 #main .following.menu .menu .item {
   transition: all linear 0.2s;
-  border-left: 1px solid transparent; }
-  #main .following.menu .menu .item.active {
-    padding-left: 0.75em;
-    transition: all linear 0.2s;
-    border-left: 2px solid #000; }
+  border-left: 1px solid transparent;
+}
+#main .following.menu .menu .item.active {
+  padding-left: 0.75em;
+  transition: all linear 0.2s;
+  border-left: 2px solid #000;
+}
 
 .ui.vertical.menu > .active.item {
-  border-radius: 0 !important; }
+  border-radius: 0 !important;
+}
 
 .properties-table {
   background-color: #fefefe !important;
-  border: 1px solid #c9caca !important; }
+  border: 1px solid #c9caca !important;
+}
+.properties-table tr td:first-child:not(.title) {
+  vertical-align: top;
+  font-weight: 600;
+  text-align: right !important;
+  border-right: 1px solid #f4f4f4;
+  min-width: 12vw;
+  max-width: 33vw;
+  text-transform: capitalize;
+}
+@media (max-width: 768px) {
   .properties-table tr td:first-child:not(.title) {
-    vertical-align: top;
-    font-weight: 600;
-    text-align: right !important;
-    border-right: 1px solid #f4f4f4;
-    min-width: 12vw;
-    max-width: 33vw;
-    text-transform: capitalize; }
-    @media (max-width: 768px) {
-      .properties-table tr td:first-child:not(.title) {
-        text-align: left !important; } }
-  .properties-table tr td:nth-child(2) {
-    width: 100%;
-    text-align: justify !important;
-    padding-right: 2em !important; }
-  .properties-table span {
-    display: block; }
-  .properties-table .choice {
-    padding-top: 1em;
-    font-weight: bold; }
-  .properties-table .choice-flat {
-    padding: 1em 0.4em 1em 0;
-    font-weight: bold;
-    float: left; }
-  .properties-table .choice-description {
-    padding-bottom: 0.3em;
-    padding-left: 0.8em; }
-  .properties-table td code {
-    background-color: #ecfffb;
-    border: 1px solid #cbe7e1; }
-  .properties-table td.title {
-    background-color: #f9fafb !important;
-    vertical-align: middle;
     text-align: left !important;
-    text-transform: uppercase !important;
-    font-size: smaller;
-    letter-spacing: 1px;
-    padding-left: 1.33em !important; }
-  .properties-table td .header {
-    padding: 4px 0 0 0 !important; }
-  .properties-table * {
-    text-shadow: none !important; }
+  }
+}
+.properties-table tr td:nth-child(2) {
+  width: 100%;
+  text-align: justify !important;
+  padding-right: 2em !important;
+}
+.properties-table span {
+  display: block;
+}
+.properties-table .choice {
+  padding-top: 1em;
+  font-weight: bold;
+}
+.properties-table .choice-flat {
+  padding: 1em 0.4em 1em 0;
+  font-weight: bold;
+  float: left;
+}
+.properties-table .choice-description {
+  padding-bottom: 0.3em;
+  padding-left: 0.8em;
+}
+.properties-table td code {
+  background-color: #ecfffb;
+  border: 1px solid #cbe7e1;
+}
+.properties-table td.title {
+  background-color: #f9fafb !important;
+  vertical-align: middle;
+  text-align: left !important;
+  text-transform: uppercase !important;
+  font-size: smaller;
+  letter-spacing: 1px;
+  padding-left: 1.33em !important;
+}
+.properties-table td .header {
+  padding: 4px 0 0 0 !important;
+}
+.properties-table * {
+  text-shadow: none !important;
+}
+
+body {
+  font-family: "Inter";
+}
 
 .hive i {
-  margin-right: 8px; }
+  margin-right: 8px;
+}
 
 video {
   width: 80%;
   max-width: 80%;
-  height: auto; }
+  height: auto;
+}
 
 .x2 {
-  font-size: 16px; }
+  font-size: 16px;
+}
 
 .x3 {
-  font-size: 18px; }
+  font-size: 18px;
+}
 
 .x4 {
-  font-size: 24px; }
+  font-size: 24px;
+}
 
 .x4 {
-  font-size: 36px; }
+  font-size: 36px;
+}
 
 .labels .label {
   font-size: 10px !important;
   font-weight: bold;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+}
 
 .slider-holder {
   padding-left: 2em;
-  padding-right: 2em; }
+  padding-right: 2em;
+}
 
 .example .message, .message, .max-70 {
-  max-width: 700px; }
+  max-width: 700px;
+}
 
 .article img {
   border: 1px solid #cbcbcb;
-  padding: 2px; }
+  padding: 2px;
+}
 
 .medium-zoom-overlay {
-  z-index: 50000; }
+  z-index: 50000;
+}
 
 .medium-zoom-image--opened {
   z-index: 50001;
-  border: 2px solid #1b1c1d !important; }
+  border: 2px solid #1b1c1d !important;
+}
 
 pre code {
   width: 100%;
-  font-family: "Cascadia Code", Consolas, 'Courier New', monospace;
+  font-family: "Cascadia Code", Consolas, "Courier New", monospace;
   font-weight: normal;
   font-size: 12px;
   padding: 0.5rem 1.2rem;
   background-color: #dde4e7;
-  border: 1px solid #606267; }
+  border: 1px solid #606267;
+}
 
 #related {
-  margin-top: 5rem; }
+  margin-top: 5rem;
+}
 
 .ui.inverted.vertical.menu .item .menu .active.item {
-  color: #ffcc00 !important; }
+  color: #ffcc00 !important;
+}
 
 .hidden {
   opacity: 0 !important;
-  font-size: 0.00001px !important; }
+  font-size: 0.00001px !important;
+}
 
-body[data-hivehref="Reference"] .sticky > h4:nth-child(1) {
-  display: none !important; }
+body[data-hivehref=Reference] .sticky > h4:nth-child(1) {
+  display: none !important;
+}
 
 code {
-  padding: 0 3px; }
+  padding: 0 3px;
+}
 
 .main li {
   font-size: 16px;
-  line-height: 24px; }
+  line-height: 24px;
+}
 
 .no-border {
-  border: 0 !important; }
+  border: 0 !important;
+}
 
 img.box {
   margin: 35px;
   width: 180px;
-  height: auto; }
+  height: auto;
+}
 
 .inverted.masthead, .footer {
-  background: #2d2e2f !important; }
+  background: #2d2e2f !important;
+}
 
 .introduction h1.header {
-  font-weight: 100 !important; }
-  .introduction h1.header .silent {
-    font-weight: 400 !important;
-    letter-spacing: 0;
-    font-size: 14px; }
+  font-weight: 100 !important;
+}
+.introduction h1.header .silent {
+  font-weight: 400 !important;
+  letter-spacing: 0;
+  font-size: 14px;
+}
 
 .silent {
-  opacity: 0.4 !important; }
+  opacity: 0.4 !important;
+}
 
 .next-link {
-  float: right; }
+  float: right;
+}
 
 h4 {
-  padding-bottom: 1em !important; }
+  padding-bottom: 1em !important;
+}
 
 #modalimage {
   margin: auto;
   height: 45vh !important;
   width: auto !important;
-  margin-bottom: 16px; }
+  margin-bottom: 16px;
+}
 
 .previewer {
   background: #f9fafb !important;
@@ -299,10 +374,12 @@ h4 {
   padding: 2px !important;
   box-shadow: 0 3px 4px rgba(0, 0, 0, 0.2) !important;
   transition: all linear 0.2s;
-  margin-left: 2em !important; }
-  .previewer:hover {
-    background: #edeff2 !important;
-    box-shadow: 0 4px 9px rgba(0, 0, 0, 0.2) !important; }
+  margin-left: 2em !important;
+}
+.previewer:hover {
+  background: #edeff2 !important;
+  box-shadow: 0 4px 9px rgba(0, 0, 0, 0.2) !important;
+}
 
 /*
 .results {
